--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tableau de bord Sea Wei & Sun</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
